--- a/data-access-layer/build.gradle
+++ b/data-access-layer/build.gradle
@@ -21,9 +21,12 @@ dependencies {
     implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
     implementation 'org.postgresql:postgresql:42.5.4'
 
+    implementation 'org.springframework.security:spring-security-core:6.0.3'
+
     annotationProcessor 'org.hibernate.orm:hibernate-jpamodelgen:6.1.7.Final'
 
     api 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    api project(':security')
 }
 
 test {
