--- a/http_app/build.gradle
+++ b/http_app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.hibernate.orm:hibernate-core:6.1.7.Final'
     implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.postgresql:postgresql:42.5.4'
     implementation 'org.slf4j:slf4j-api:2.0.6'
 
@@ -32,8 +33,10 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.security:spring-security-core:6.0.3'
 
     api project(':service')
+    api project(':security')
 }
 
 test {
