--- a/service/build.gradle
+++ b/service/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group 'ru.lopa10ko.cats'
+group = 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -19,11 +19,13 @@ dependencies {
     testImplementation 'org.slf4j:slf4j-reload4j:2.0.6'
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.hibernate.orm:hibernate-core:6.1.7.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.3'
     implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
     implementation 'org.postgresql:postgresql:42.5.4'
     implementation 'org.slf4j:slf4j-api:2.0.6'
 
     api project(':data-access-layer')
+    api project(':security')
 }
 
 test {
